refinement of make_flow_dataset, proceeding to database download

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ output.log
 
 # Jupyter NB Checkpoints
 .ipynb_checkpoints/
+/notebooks/exploratory
 
 # exclude data from source control by default
 /data/
