--- a/environment.yml
+++ b/environment.yml
@@ -1,443 +1,173 @@
-name: base
+name: smartmob
 channels:
-  - ioos
-  - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - pymongo=3.4.0=py36_0
-  - qgrid=0.3.3=py36_0
-  - backports.functools_lru_cache=1.4=py36_1
-  - boost=1.65.1=py36_0
-  - boost-cpp=1.65.1=1
+  - altair=2.1.0=py_0
+  - asn1crypto=0.24.0=py36_0
+  - branca=0.3.0=py_0
   - ca-certificates=2018.4.16=0
-  - cairo=1.14.6=5
   - certifi=2018.4.16=py36_0
-  - click-plugins=1.0.3=py36_0
-  - cligj=0.4.0=py36_0
-  - conda=4.5.4=py36_0
-  - curl=7.55.1=0
-  - descartes=1.1.0=py36_0
-  - fiona=1.7.9=py36_0
-  - fontconfig=2.12.1=5
-  - freetype=2.7=2
-  - freexl=1.0.2=2
-  - freezegun=0.3.9=py36_0
-  - fuzzywuzzy=0.15.1=py36_0
+  - cffi=1.11.5=py36_0
+  - chardet=3.0.4=py36_0
+  - cryptography=2.2.1=py36_0
+  - fiona=1.7.12=py36_0
+  - folium=0.5.0=py_0
+  - gdal=2.2.4=py36_0
+  - geographiclib=1.49=py_0
   - geopandas=0.3.0=py36_0
-  - geopy=1.11.0=py36_0
-  - geos=3.6.2=1
-  - geotiff=1.4.2=0
-  - gettext=0.19.7=1
-  - giflib=5.1.4=0
-  - gitdb2=2.0.2=py36_0
-  - gitpython=2.1.5=py36_0
-  - glib=2.51.4=0
-  - h5py=2.7.1=py36_2
-  - harfbuzz=1.3.4=2
-  - hdf4=4.2.13=0
-  - hdf5=1.10.1=1
-  - icu=58.2=0
-  - json-c=0.12.1=0
-  - kealib=1.4.7=4
-  - krb5=1.14.2=0
-  - libdap4=3.18.3=2
-  - libgdal=2.1.4=8
-  - libkml=1.3.0=4
-  - libnetcdf=4.4.1.1=10
-  - libpq=9.6.3=0
-  - libspatialindex=1.8.5=1
-  - libspatialite=4.3.0a=18
-  - libssh2=1.8.0=2
-  - lzo=2.10=0
-  - matplotlib=2.1.1=py36_0
-  - munch=2.2.0=py36_0
-  - nbdime=0.3.0=py36_0
+  - geopy=1.14.0=py_0
+  - idna=2.7=py36_0
   - networkx=2.1=py36_0
-  - nlopt=2.4.2=py36_2
-  - openjpeg=2.3.0=1
   - openssl=1.0.2o=0
   - osmnx=0.8.1=py_0
-  - pango=1.40.3=2
-  - pillow=4.3.0=py36_1
-  - poppler=0.61.1=2
-  - poppler-data=0.4.8=0
-  - proj4=4.9.3=5
-  - psycopg2=2.7.3.2=py36_0
+  - pycparser=2.18=py36_0
+  - pyopenssl=18.0.0=py36_0
+  - pysocks=1.6.8=py36_1
+  - requests=2.19.1=py36_0
+  - toolz=0.9.0=py_0
+  - typing=3.6.4=py36_0
+  - urllib3=1.22=py36_0
+  - vincent=0.4.4=py36_0
+  - backcall=0.1.0=py36_0
+  - blas=1.0=mkl
+  - bleach=2.1.3=py36_0
+  - bzip2=1.0.6=h14c3975_5
+  - cairo=1.14.12=h7636065_2
+  - click=6.7=py36h5253387_0
+  - click-plugins=1.0.3=py36_0
+  - cligj=0.4.0=py36_0
+  - curl=7.60.0=h84994c4_0
+  - cycler=0.10.0=py36h93f1223_0
+  - cython=0.28.3=py36h14c3975_0
+  - dbus=1.13.2=h714fa37_1
+  - decorator=4.3.0=py36_0
+  - descartes=1.1.0=py36h2f9c1c0_0
+  - entrypoints=0.2.3=py36h1aec115_2
+  - expat=2.2.5=he0dffb1_0
+  - fontconfig=2.12.6=h49f89f6_0
+  - freetype=2.8=hab7d2ae_1
+  - freexl=1.0.5=h14c3975_0
+  - geos=3.6.2=heeff764_2
+  - giflib=5.1.4=h26a3ec6_1
+  - glib=2.56.1=h000015b_0
+  - gmp=6.1.2=h6c8ec71_1
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb453b48_1
+  - hdf4=4.2.13=h3ca952b_2
+  - hdf5=1.10.1=h9caa474_1
+  - html5lib=1.0.1=py36h2f9c1c0_0
+  - icu=58.2=h9c2bf20_1
+  - intel-openmp=2018.0.3=0
+  - ipykernel=4.8.2=py36_0
+  - ipython=6.4.0=py36_0
+  - ipython_genutils=0.2.0=py36hb52b0d5_0
+  - ipywidgets=7.2.1=py36_0
+  - jedi=0.12.0=py36_1
+  - jinja2=2.10=py36ha16c418_0
+  - jpeg=9b=h024ee3a_2
+  - json-c=0.13.1=h1bed415_0
+  - jsonschema=2.6.0=py36h006f8b5_0
+  - jupyter=1.0.0=py36_4
+  - jupyter_client=5.2.3=py36_0
+  - jupyter_console=5.2.0=py36he59e554_1
+  - jupyter_core=4.4.0=py36h7c827e3_0
+  - kealib=1.4.7=h79811e5_5
+  - kiwisolver=1.0.1=py36h764f252_0
+  - krb5=1.16.1=hc83ff2d_6
+  - libboost=1.65.1=habcd387_4
+  - libcurl=7.60.0=h1ad7b7a_0
+  - libdap4=3.19.0=h5bd89bb_2
+  - libedit=3.1.20170329=h6b74fdf_2
+  - libffi=3.2.1=hd88cf55_4
+  - libgcc-ng=7.2.0=hdf63c60_3
+  - libgdal=2.2.4=hc8d23f9_1
+  - libgfortran-ng=7.2.0=hdf63c60_3
+  - libkml=1.3.0=h9d32c78_3
+  - libnetcdf=4.4.1.1=h816af47_8
+  - libpng=1.6.34=hb9fc6fc_0
+  - libpq=10.3=h1ad7b7a_0
+  - libsodium=1.0.16=h1bed415_0
+  - libspatialindex=1.8.5=h20b78c2_2
+  - libspatialite=4.3.0a=h72746d6_18
+  - libssh2=1.8.0=h9cfc8f7_4
+  - libstdcxx-ng=7.2.0=hdf63c60_3
+  - libtiff=4.0.9=he85c1e1_1
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.13=h1bed415_1
+  - libxml2=2.9.8=h26e45fe_1
+  - markupsafe=1.0=py36hd9260cd_1
+  - matplotlib=2.2.2=py36h0e671d2_1
+  - mistune=0.8.3=py36h14c3975_1
+  - mkl=2018.0.3=1
+  - mkl_fft=1.0.1=py36h3010b51_0
+  - mkl_random=1.0.1=py36h629b387_0
+  - munch=2.3.2=py36_0
+  - nbconvert=5.3.1=py36hb41ffb7_0
+  - nbformat=4.4.0=py36h31c9010_0
+  - ncurses=6.1=hf484d3e_0
+  - notebook=5.5.0=py36_0
+  - numpy=1.14.5=py36hcd700cb_0
+  - numpy-base=1.14.5=py36hdbf6ddf_0
+  - openjpeg=2.3.0=h05c96fa_1
+  - pandas=0.23.1=py36h637b7d7_0
+  - pandoc=1.19.2.1=hea2e7c5_1
+  - pandocfilters=1.4.2=py36ha6701b7_1
+  - parso=0.2.1=py36_0
+  - pcre=8.42=h439df22_0
+  - pexpect=4.6.0=py36_0
+  - pickleshare=0.7.4=py36h63277f8_0
+  - pip=10.0.1=py36_0
+  - pixman=0.34.0=hceecf20_3
+  - poppler=0.65.0=ha54bb34_0
+  - poppler-data=0.4.9=0
+  - proj4=4.9.3=hc8507d1_7
+  - prompt_toolkit=1.0.15=py36h17d85b1_0
+  - psycopg2=2.7.4=py36hb7f436b_0
+  - ptyprocess=0.5.2=py36h69acd42_0
+  - pygments=2.2.0=py36h0d3125c_0
+  - pyparsing=2.2.0=py36hee85983_1
   - pyproj=1.9.5.1=py36_0
+  - pyqt=5.9.2=py36h751905a_0
   - pysal=1.14.3=py36_0
-  - pytables=3.4.2=py36_7
-  - python-levenshtein=0.12.0=py36_0
-  - qt=5.6.2=6
-  - r-assertthat=0.1=r3.4.1_0
-  - r-backports=1.0.5=r3.4.1_0
-  - r-base=3.4.1=2
-  - r-base64enc=0.1_3=r3.4.1_0
-  - r-bh=1.65.0_1=r3.4.1_0
-  - r-bindr=0.1=r3.4.1_0
-  - r-bindrcpp=0.2=r3.4.1_0
-  - r-bitops=1.0_6=r3.4.1_0
-  - r-boot=1.3_18=r3.4.1_0
-  - r-broom=0.4.2=r3.4.1_0
-  - r-car=2.1_4=r3.4.1_0
-  - r-catools=1.17.1=r3.4.1_0
-  - r-cellranger=1.1.0=r3.4.1_0
-  - r-class=7.3_14=r3.4.1_0
-  - r-cluster=2.0.6=r3.4.1_0
-  - r-codetools=0.2_15=r3.4.1_0
-  - r-colorspace=1.3_2=r3.4.1_0
-  - r-crayon=1.3.2=r3.4.1_0
-  - r-curl=2.4=r3.4.1_0
-  - r-data.table=1.10.4=r3.4.1_0
-  - r-dbi=0.6_1=r3.4.1_0
-  - r-dichromat=2.0_0=r3.4.1_0
-  - r-digest=0.6.12=r3.4.1_0
-  - r-dplyr=0.7.0=r3.4.1_0
-  - r-evaluate=0.10.1=r3.4.1_0
-  - r-forcats=0.2.0=r3.4.1_0
-  - r-foreach=1.4.3=r3.4.1_0
-  - r-foreign=0.8_67=r3.4.1_0
-  - r-formatr=1.4=r3.4.1_0
-  - r-ggplot2=2.2.1=r3.4.1_0
-  - r-gistr=0.4.0=r3.4.1_0
-  - r-glmnet=2.0_5=r3.4.1_0
-  - r-glue=1.1.1=r3.4.1_0
-  - r-gtable=0.2.0=r3.4.1_0
-  - r-haven=1.0.0=r3.4.1_0
-  - r-hexbin=1.27.1=r3.4.1_0
-  - r-highr=0.6=r3.4.1_0
-  - r-hms=0.3=r3.4.1_0
-  - r-htmltools=0.3.6=r3.4.1_0
-  - r-htmlwidgets=0.9=r3.4.1_0
-  - r-httpuv=1.3.3=r3.4.1_0
-  - r-httr=1.2.1=r3.4.1_0
-  - r-irdisplay=0.4.4=r3.4.1_0
-  - r-irkernel=0.8.11=r3.4.1_0
-  - r-iterators=1.0.8=r3.4.1_0
-  - r-jsonlite=1.4=r3.4.1_0
-  - r-kernsmooth=2.23_15=r3.4.1_0
-  - r-knitr=1.16=r3.4.1_0
-  - r-labeling=0.3=r3.4.1_0
-  - r-lattice=0.20_34=r3.4.1_0
-  - r-lazyeval=0.2.0=r3.4.1_0
-  - r-lme4=1.1_13=r3.4.1_0
-  - r-lubridate=1.6.0=r3.4.1_0
-  - r-magrittr=1.5=r3.4.1_0
-  - r-maps=3.2.0=r3.4.1_0
-  - r-markdown=0.8=r3.4.1_0
-  - r-mass=7.3_45=r3.4.1_0
-  - r-matrix=1.2_7.1=r3.4.1_0
-  - r-matrixmodels=0.4_1=r3.4.1_0
-  - r-mgcv=1.8_17=r3.4.1_0
-  - r-mime=0.5=r3.4.1_0
-  - r-minqa=1.2.4=r3.4.1_0
-  - r-mnormt=1.5_5=r3.4.1_0
-  - r-modelmetrics=1.1.0=r3.4.1_0
-  - r-modelr=0.1.0=r3.4.1_0
-  - r-munsell=0.4.3=r3.4.1_0
-  - r-nlme=3.1_131=r3.4.1_0
-  - r-nloptr=1.0.4=r3.4.1_0
-  - r-nnet=7.3_12=r3.4.1_0
-  - r-openssl=0.9.7=r3.4.1_0
-  - r-pbdzmq=0.2_4=r3.4.1_0
-  - r-pbkrtest=0.4_7=r3.4.1_0
-  - r-pkgconfig=2.0.1=r3.4.1_0
-  - r-plogr=0.1_1=r3.4.1_0
-  - r-plyr=1.8.4=r3.4.1_0
-  - r-pryr=0.1.2=r3.4.1_0
-  - r-psych=1.7.3.21=r3.4.1_0
-  - r-purrr=0.2.2=r3.4.1_0
-  - r-quantmod=0.4_8=r3.4.1_0
-  - r-quantreg=5.33=r3.4.1_0
-  - r-r6=2.2.0=r3.4.1_0
-  - r-randomforest=4.6_12=r3.4.1_0
-  - r-rbokeh=0.5.0=r3.4.1_0
-  - r-rcolorbrewer=1.1_2=r3.4.1_0
-  - r-rcpp=0.12.13=r3.4.1_0
-  - r-rcppeigen=0.3.2.9.1=r3.4.1_0
-  - r-readr=1.1.0=r3.4.1_0
-  - r-readxl=1.0.0=r3.4.1_0
-  - r-rematch=1.0.1=r3.4.1_0
-  - r-repr=0.10=r3.4.1_0
-  - r-reshape2=1.4.2=r3.4.1_0
-  - r-rlang=0.1.2=r3.4.1_0
-  - r-rmarkdown=1.6=r3.4.1_2
-  - r-rpart=4.1_10=r3.4.1_0
-  - r-rprojroot=1.2=r3.4.1_0
-  - r-rvest=0.3.2=r3.4.1_0
-  - r-scales=0.4.1=r3.4.1_0
-  - r-selectr=0.3_1=r3.4.1_0
-  - r-shiny=1.0.3=r3.4.1_0
-  - r-sourcetools=0.1.6=r3.4.1_0
-  - r-sparsem=1.76=r3.4.1_0
-  - r-spatial=7.3_11=r3.4.1_0
-  - r-stringi=1.1.2=r3.4.1_0
-  - r-stringr=1.2.0=r3.4.1_0
-  - r-survival=2.40_1=r3.4.1_0
-  - r-tibble=1.3.3=r3.4.1_0
-  - r-tidyr=0.6.1=r3.4.1_0
-  - r-tidyverse=1.1.1=r3.4.1_0
-  - r-ttr=0.23_1=r3.4.1_0
-  - r-uuid=0.1_2=r3.4.1_0
-  - r-xml2=1.1.1=r3.4.1_0
-  - r-xtable=1.8_2=r3.4.1_0
-  - r-xts=0.9_7=r3.4.1_0
-  - r-yaml=2.1.14=r3.4.1_0
-  - r-zoo=1.7_14=r3.4.1_0
-  - rtree=0.8.3=py36_0
-  - shapely=1.6.3=py36_0
-  - smmap2=2.0.3=py36_0
-  - xerces-c=3.2.0=0
-  - zlib=1.2.11=0
-  - _license=1.1=py36_1
-  - alabaster=0.7.10=py36_0
-  - anaconda-client=1.6.3=py36_0
-  - anaconda=custom=py36hbbc8b67_0
-  - anaconda-navigator=1.6.2=py36_0
-  - anaconda-project=0.6.0=py36_0
-  - asn1crypto=0.22.0=py36_0
-  - astroid=1.4.9=py36_0
-  - astropy=1.3.2=np112py36_0
-  - babel=2.4.0=py36_0
-  - backports=1.0=py36_0
-  - beautifulsoup4=4.6.0=py36_0
-  - bitarray=0.8.1=py36_0
-  - blaze=0.10.1=py36_0
-  - bleach=1.5.0=py36_0
-  - bokeh=0.12.5=py36_1
-  - boto=2.46.1=py36_0
-  - bottleneck=1.2.1=np112py36_0
-  - bzip2=1.0.6=3
-  - cffi=1.10.0=py36_0
-  - chardet=3.0.3=py36_0
-  - click=6.7=py36_0
-  - cloudpickle=0.2.2=py36_0
-  - clyent=1.2.2=py36_0
-  - colorama=0.3.9=py36_0
-  - conda-env=2.6.0=h36134e3_1
-  - contextlib2=0.5.5=py36_0
-  - cryptography=1.8.1=py36_0
-  - cycler=0.10.0=py36_0
-  - cython=0.25.2=py36_0
-  - cytoolz=0.8.2=py36_0
-  - dask=0.14.3=py36_1
-  - datashape=0.5.4=py36_0
-  - dbus=1.10.10=0
-  - decorator=4.0.11=py36_0
-  - distributed=1.16.3=py36_0
-  - docutils=0.13.1=py36_0
-  - entrypoints=0.2.2=py36_1
-  - et_xmlfile=1.0.1=py36_0
-  - expat=2.1.0=0
-  - fastcache=1.0.2=py36_1
-  - flask=0.12.2=py36_0
-  - flask-cors=3.0.2=py36_0
-  - get_terminal_size=1.0.0=py36_0
-  - gevent=1.2.1=py36_0
-  - gmp=6.1.0=0
-  - greenlet=0.4.12=py36_0
-  - gsl=2.2.1=0
-  - gst-plugins-base=1.8.0=0
-  - gstreamer=1.8.0=0
-  - heapdict=1.0.0=py36_1
-  - html5lib=0.999=py36_0
-  - idna=2.5=py36_0
-  - imagesize=0.7.1=py36_0
-  - ipykernel=4.6.1=py36_0
-  - ipython=5.3.0=py36_0
-  - ipython_genutils=0.2.0=py36_0
-  - ipywidgets=6.0.0=py36_0
-  - isort=4.2.5=py36_0
-  - itsdangerous=0.24=py36_0
-  - jbig=2.1=0
-  - jdcal=1.3=py36_0
-  - jedi=0.10.2=py36_2
-  - jinja2=2.9.6=py36_0
-  - jpeg=9b=0
-  - jsonschema=2.6.0=py36_0
-  - jupyter=1.0.0=py36h9896ce5_0
-  - jupyter_client=5.0.1=py36_0
-  - jupyter_console=5.1.0=py36_0
-  - jupyter_core=4.3.0=py36_0
-  - lazy-object-proxy=1.2.2=py36_0
-  - libffi=3.2.1=1
-  - libgcc=4.8.5=2
-  - libgcc-ng=7.2.0=h7cc24e2_2
-  - libgfortran=3.0.0=1
-  - libiconv=1.14=0
-  - libpng=1.6.27=0
-  - libsodium=1.0.10=0
-  - libtiff=4.0.6=3
-  - libtool=2.4.2=0
-  - libxcb=1.12=1
-  - libxml2=2.9.4=0
-  - libxslt=1.1.29=0
-  - llvmlite=0.18.0=py36_0
-  - locket=0.2.0=py36_1
-  - lxml=3.7.3=py36_0
-  - markupsafe=0.23=py36_2
-  - mistune=0.7.4=py36_0
-  - mkl=2017.0.1=0
-  - mkl-service=1.1.2=py36_3
-  - mpmath=0.19=py36_1
-  - msgpack-python=0.4.8=py36_0
-  - multipledispatch=0.4.9=py36_0
-  - navigator-updater=0.1.0=py36_0
-  - nbconvert=5.1.1=py36_0
-  - nbformat=4.3.0=py36_0
-  - ncurses=5.9=10
-  - nltk=3.2.3=py36_0
-  - nose=1.3.7=py36_1
-  - notebook=5.0.0=py36_0
-  - numba=0.33.0=np112py36_0
-  - numexpr=2.6.2=np112py36_0
-  - numpy=1.12.1=py36_0
-  - numpydoc=0.6.0=py36_0
-  - odo=0.5.0=py36_1
-  - olefile=0.44=py36_0
-  - openpyxl=2.4.7=py36_0
-  - packaging=16.8=py36_0
-  - pandas=0.20.1=np112py36_0
-  - pandoc=1.15.0.6=0
-  - pandocfilters=1.4.1=py36_0
-  - partd=0.3.8=py36_0
-  - path.py=10.3.1=py36_0
-  - pathlib2=2.2.1=py36_0
-  - patsy=0.4.1=py36_0
-  - pcre=8.39=1
-  - pep8=1.7.0=py36_0
-  - pexpect=4.2.1=py36_0
-  - pickleshare=0.7.4=py36_0
-  - pip=9.0.1=py36_1
-  - pixman=0.34.0=0
-  - ply=3.10=py36_0
-  - prompt_toolkit=1.0.14=py36_0
-  - psutil=5.2.2=py36_0
-  - ptyprocess=0.5.1=py36_0
-  - py=1.4.33=py36_0
-  - pycosat=0.6.3=py36h0a5515d_0
-  - pycparser=2.17=py36_0
-  - pycrypto=2.6.1=py36_6
-  - pycurl=7.43.0=py36h5e72054_3
-  - pyflakes=1.5.0=py36_0
-  - pygments=2.2.0=py36_0
-  - pylint=1.6.4=py36_1
-  - pyodbc=4.0.16=py36_0
-  - pyopenssl=17.0.0=py36_0
-  - pyparsing=2.1.4=py36_0
-  - pyqt=5.6.0=py36_2
-  - pytest=3.0.7=py36_0
-  - python=3.6.1=2
-  - python-dateutil=2.6.0=py36_0
-  - pytz=2017.2=py36_0
-  - pywavelets=0.5.2=np112py36_0
-  - pyyaml=3.12=py36_0
-  - pyzmq=16.0.2=py36_0
-  - qtawesome=0.4.4=py36_0
-  - qtconsole=4.3.0=py36_0
-  - qtpy=1.2.1=py36_0
-  - r-caret=6.0_76=r3.4.1_0
-  - r-essentials=1.5.2=r3.4.1_0
-  - r-recommended=3.4.1=r3.4.1_0
-  - readline=6.2=2
-  - requests=2.14.2=py36_0
-  - rope=0.9.4=py36_1
-  - ruamel_yaml=0.11.14=py36_1
-  - scikit-image=0.13.0=np112py36_0
-  - scikit-learn=0.18.1=np112py36_1
-  - scipy=0.19.0=np112py36_0
-  - seaborn=0.7.1=py36_0
-  - setuptools=38.5.1=py36_0
-  - simplegeneric=0.8.1=py36_1
-  - singledispatch=3.4.0.3=py36_0
-  - sip=4.18=py36_0
-  - six=1.10.0=py36_0
-  - snowballstemmer=1.2.1=py36_0
-  - sortedcollections=0.5.3=py36_0
-  - sortedcontainers=1.5.7=py36_0
-  - sphinx=1.5.6=py36_0
-  - spyder=3.1.4=py36_0
-  - sqlalchemy=1.1.9=py36_0
-  - sqlite=3.13.0=0
-  - statsmodels=0.8.0=np112py36_0
-  - sympy=1.0=py36_0
-  - tblib=1.3.2=py36_0
-  - terminado=0.6=py36_0
-  - testpath=0.3=py36_0
-  - tk=8.5.18=0
-  - toolz=0.8.2=py36_0
-  - tornado=4.5.1=py36_0
-  - traitlets=4.3.2=py36_0
-  - unicodecsv=0.14.1=py36_0
-  - unixodbc=2.3.4=0
-  - util-linux=2.21=0
-  - wcwidth=0.1.7=py36_0
-  - werkzeug=0.12.2=py36_0
-  - wheel=0.29.0=py36_0
-  - widgetsnbextension=2.0.0=py36_0
-  - wrapt=1.10.10=py36_0
-  - xlrd=1.0.0=py36_0
-  - xlsxwriter=0.9.6=py36_0
-  - xlwt=1.2.0=py36_0
-  - xz=5.2.2=1
-  - yaml=0.1.6=0
-  - zeromq=4.1.5=0
-  - zict=0.1.2=py36_0
-  - folium=0.2.1=py36_0
+  - python=3.6.5=hc3d631a_2
+  - python-dateutil=2.7.3=py36_0
+  - pytz=2018.4=py36_0
+  - pyzmq=17.0.0=py36h14c3975_0
+  - qt=5.9.5=h7e424d6_0
+  - qtconsole=4.3.1=py36h8f73b5b_0
+  - readline=7.0=ha6073c6_4
+  - rtree=0.8.3=py36h2f9c1c0_0
+  - scipy=1.1.0=py36hfc37229_0
+  - send2trash=1.5.0=py36_0
+  - setuptools=39.2.0=py36_0
+  - shapely=1.6.4=py36h0c48222_0
+  - simplegeneric=0.8.1=py36_2
+  - sip=4.19.8=py36hf484d3e_0
+  - six=1.11.0=py36h372c433_1
+  - sqlalchemy=1.2.8=py36h14c3975_0
+  - sqlite=3.23.1=he433501_0
+  - terminado=0.8.1=py36_1
+  - testpath=0.3.1=py36h8cadb63_0
+  - tk=8.6.7=hc745277_3
+  - tornado=5.0.2=py36_0
+  - traitlets=4.3.2=py36h674d592_0
+  - wcwidth=0.1.7=py36hdf4376a_0
+  - webencodings=0.5.1=py36h800622e_1
+  - wheel=0.31.1=py36_0
+  - widgetsnbextension=3.2.1=py36_0
+  - xerces-c=3.2.1=hac72e42_0
+  - xz=5.2.4=h14c3975_4
+  - zeromq=4.2.5=h439df22_0
+  - zlib=1.2.11=ha838bed_2
   - pip:
-    - alembic==0.9.6
-    - arrow==0.12.0
-    - awscli==1.14.50
-    - backports.shutil-get-terminal-size==1.0.0
-    - binaryornot==0.4.4
-    - blinker==1.3
-    - boto3==1.6.3
-    - botocore==1.9.3
-    - cookiecutter==1.6.0
-    - coverage==4.4.2
-    - extras==0.0.3
-    - fixtures==2.0.0
-    - flask-babel==0.11.1
-    - flask-gravatar==0.4.2
-    - flask-htmlmin==1.2
-    - flask-login==0.3.2
-    - flask-mail==0.9.1
-    - flask-migrate==2.0.3
-    - flask-paranoid==0.1.0
-    - flask-principal==0.4.0
-    - flask-script==2.0.6
-    - flask-security==1.7.5
-    - flask-sqlalchemy==2.1
-    - flask-wtf==0.12
-    - future==0.16.0
-    - geojson==2.3.0
-    - htmlmin==0.1.11
-    - jinja2-time==0.2.0
+    - boto3==1.7.45
+    - botocore==1.10.45
+    - docutils==0.14
+    - geojson==2.4.0
     - jmespath==0.9.3
-    - linecache2==1.0.0
-    - mako==1.0.7
-    - passlib==1.6.2
-    - pbr==1.9.1
-    - pgadmin4==2.0
-    - poyo==0.4.1
-    - pulp==1.6.8
-    - pyasn1==0.4.2
-    - pyrsistent==0.11.13
-    - python-dotenv==0.7.1
-    - python-editor==1.0.3
-    - python-mimeparse==1.5.1
-    - rope-py3k==0.9.4.post1
-    - rsa==3.4.2
+    - pymongo==3.6.1
+    - python-dotenv==0.8.2
     - s3transfer==0.1.13
-    - simplejson==3.6.5
-    - speaklater==1.3
-    - sqlparse==0.1.19
-    - tables==3.4.2
-    - testtools==2.3.0
-    - traceback2==1.4.0
-    - unittest2==1.1.0
-    - urllib3==1.22
-    - whichcraft==0.4.1
-    - wtforms==2.0.2
-prefix: /home/bogo/anaconda3
+prefix: /home/sepud/miniconda3/envs/smartmob
 
